--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Create a Node.js app for building production-ready RESTful APIs using Express, by running one command",
   "bin": "bin/createNodejsApp.js",
   "main": "src/index.js",
-  "repository": "https://github.com/hagopj13/node-express-boilerplate.git",
-  "author": "Hagop Jamkojian <hagopj13@gmail.com>",
+  "repository": "https://github.com/krushiraj/express-napi.git",
+  "author": "Krushi Raj Tula",
   "license": "MIT",
   "engines": {
     "node": ">=12.0.0"
@@ -64,6 +64,8 @@
     "moment": "^2.24.0",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
+    "node-addon-api": "^5.1.0",
+    "node-gyp": "^9.3.1",
     "nodemailer": "^6.3.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
